# vcf-super-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  justfile  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  e2e.yml  lint.yml  release.yml  test.yml
docs/: commands.md  design.md  index.md  install.md  profiles.md  usage.md  writes.md
docs/stylesheets/: extra.css
docs/superpowers/specs/: 2026-06-05-vcf-super-cli-design.md  2026-06-05-vcf-super-cli-v0.2-writes-design.md  2026-06-05-vcf-super-cli-v0.3-ergonomics-design.md  2026-06-08-vcf-super-cli-v0.5-find-vms-design.md  2026-07-02-vcf-super-cli-nsx-traceflow-design.md
skills/vcf-super-cli/: SKILL.md
tests/: test_builder.py  test_cli.py  test_cli_smoke.py  test_complete.py  test_complete_cache.py  test_complete_dynamic.py  test_config.py  test_discover.py  test_errors.py  test_filter_pagination_cli.py  test_filters.py  test_paginate.py  test_params.py  test_preview.py  test_pyvmomi_events.py  test_pyvmomi_find.py  test_pyvmomi_inventory.py  test_pyvmomi_perf.py  test_pyvmomi_tasks.py  test_render.py  test_resources.py  test_session.py  test_skill.py  test_version.py  test_vmomi.py  test_write_errors.py
tests/e2e/: README.md  conftest.py  test_read_smoke.py
vsc/: __init__.py  _version.py  logging_config.py
vsc/cli/: app.py  profiles.py  skill.py
vsc/config/: __init__.py  schema.py  store.py
vsc/connect/: __init__.py  session.py  targets.py  vmomi.py
vsc/output/: errors.py  exit_codes.py  render.py
vsc/pyvmomi/: __init__.py  events.py  find.py  inventory.py  perf.py  runner.py  tasks.py
vsc/skill/: __init__.py  export.py
vsc/skill/assets/: SKILL.md
