[project]
name = "vcf-super-cli"
version = "0.5.0"
description = "Modern, agent-friendly CLI for VMware Cloud Foundation 9, with a command tree generated dynamically from the vcf-sdk vAPI bindings."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Thomas", email = "mick27@gmail.com" }]
keywords = ["vmware", "vcf", "vsphere", "vcenter", "nsx", "cli", "vcf-sdk", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Networking",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "structlog>=24.1",
    "platformdirs>=4.2",
    "ruamel.yaml>=0.18",
    "keyring>=25.0",
    "vmware-vcenter>=9.1.0.0",
    "vcf-nsx>=9.1.0.0",
    "pyvmomi>=9.1.0.0",
]

[project.scripts]
vcf-super-cli = "vsc.cli.app:main"
vsc = "vsc.cli.app:main"

[project.urls]
Homepage = "https://github.com/thomaschristory/vcf-super-cli"
Documentation = "https://thomaschristory.github.io/vcf-super-cli/"
Issues = "https://github.com/thomaschristory/vcf-super-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vsc"]
# The bundled agent Skill (vsc/skill/assets/SKILL.md) ships as package data, so it
# travels with the install and is exportable via `vsc skill export`.

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "mypy>=1.20",
    "ruff>=0.15",
    "pre-commit>=3.7",
    "types-PyYAML>=6.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pyyaml>=6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle / pyflakes
    "I",                 # isort
    "B",                 # bugbear
    "UP",                # pyupgrade
    "RUF",               # ruff-specific
    "SIM",               # simplify
    "PL",                # pylint
    "TID",               # tidy imports
    "C4",                # comprehensions
]
ignore = [
    "PLR0913",           # too many arguments — Typer commands need them
    "UP042",             # str+Enum mix is intentional (typer/pydantic-friendly)
]

[tool.ruff.lint.per-file-ignores]
"vsc/cli/**" = [
    "B008",              # typer.Option/Argument in defaults is the Typer idiom
]
"vsc/pyvmomi/**" = [
    "B008",              # typer.Option/Argument in defaults is the Typer idiom
]
"vsc/gen/**" = [
    "PLR0911",           # type dispatch tables legitimately have many returns
    "PLR0912",           # ...and many branches
]
"vsc/connect/vmomi.py" = [
    "PLR0911",           # vmomi_jsonable is a type-dispatch table (many returns)
]
"tests/**" = [
    "PLR2004",           # magic values in tests are fine
    "PLR0915",           # lifecycle tests legitimately need many statements
    "S101",              # asserts are how pytest works
    "B008",              # typer defaults in CLI-invoking tests
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
pretty = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# The vcf-sdk vAPI bindings and pyVmomi ship no type stubs.
module = ["com", "com.*", "vcf", "vcf.*", "vmware", "vmware.*", "pyVmomi.*", "pyVim.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# pyVmomi/pyVim are dynamically typed (attributes synthesized at runtime); skipping
# their analysis treats their surface as Any rather than flagging every vim.* access
# and untyped SmartConnect/Disconnect call.
module = ["pyVmomi", "pyVmomi.*", "pyVim", "pyVim.*"]
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config --ignore=tests/e2e"
testpaths = ["tests"]
